Added a few unit tests, fixed code